add links to resources

--- a/image_captioning.ipynb
+++ b/image_captioning.ipynb
@@ -80,19 +80,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-12-10 15:10:16--  http://images.cocodataset.org/zips/train2014.zip\n",
+      "Resolving images.cocodataset.org (images.cocodataset.org)... 52.217.37.52\n",
+      "Connecting to images.cocodataset.org (images.cocodataset.org)|52.217.37.52|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 13510573713 (13G) [application/zip]\n",
+      "Saving to: ‘train2014.zip.1’\n",
+      "\n",
+      "train2014.zip.1       0%[                    ]  20,54M   590KB/s    eta 8h 7m  ^C\n"
+     ]
+    }
+   ],
    "source": [
     "# Download datas (very long with wget, but not working with gsutil)\n",
     "\n",
-    "# !chmod 751 dl_coco.sh\n",
-    "# !./dl_coco.sh\n",
+    "!chmod 751 dl_coco.sh\n",
+    "!./dl_coco.sh\n",
     "\n",
     "# OR\n",
     "\n",
-    "# !gsutil -m rsync gs://images.cocodataset.org/train2014 data/images\n",
-    "# !gsutil -m rsync gs://images.cocodataset.org/annotations data/annotations"
+    "#!gsutil -m rsync gs://images.cocodataset.org/train2014 data/images\n",
+    "#!gsutil -m rsync gs://images.cocodataset.org/annotations data/annotations\n",
+    "    \n",
+    "#https://www.kaggle.com/hsankesara/flickr-image-dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Useful resources\n",
+    "\n",
+    "- [Article by google researchers](https://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Vinyals_Show_and_Tell_2015_CVPR_paper.pdf) \n",
+    "\n",
+    "- [Stanford paper](https://cs.stanford.edu/people/karpathy/cvpr2015.pdf)\n",
+    "\n",
+    "- [Flickr30k dataset on Kaggle](https://www.kaggle.com/hsankesara/flickr-image-dataset)"
    ]
   }
  ],
