add word embedding model

--- a/preprocessing_flickr30k.ipynb
+++ b/preprocessing_flickr30k.ipynb
@@ -16,16 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 1.7.1\n",
+      "GPU found :)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchtext\n",
     "from torchtext.data.utils import get_tokenizer\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms, utils\n",
-    "import torchvision.models as models"
+    "import torchvision.models as models\n",
+    "\n",
+    "print(f'PyTorch version: {torch.__version__}')\n",
+    "print(\"GPU found :)\" if torch.cuda.is_available() else \"No GPU :(\")\n",
+    "\n",
+    "# Device configuration\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -507,11 +522,7 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Creating a pretrained cnn model instance\n",
-    "\n",
-    "vgg16 = models.vgg16()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
