add image captioning model skeleton + word2vec trained model

--- a/model_v1.ipynb
+++ b/model_v1.ipynb
@@ -2,19 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 1.7.1\n",
+      "GPU found :)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "import torchvision.models as m\n",
+    "from torchsummary import summary\n",
+    "\n",
+    "print(f'PyTorch version: {torch.__version__}')\n",
+    "print(\"GPU found :)\" if torch.cuda.is_available() else \"No GPU :(\")\n",
+    "\n",
+    "# Device configuration\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,17 +40,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 64, 55, 55]          23,296\n",
+      "              ReLU-2           [-1, 64, 55, 55]               0\n",
+      "         MaxPool2d-3           [-1, 64, 27, 27]               0\n",
+      "            Conv2d-4          [-1, 192, 27, 27]         307,392\n",
+      "              ReLU-5          [-1, 192, 27, 27]               0\n",
+      "         MaxPool2d-6          [-1, 192, 13, 13]               0\n",
+      "            Conv2d-7          [-1, 384, 13, 13]         663,936\n",
+      "              ReLU-8          [-1, 384, 13, 13]               0\n",
+      "            Conv2d-9          [-1, 256, 13, 13]         884,992\n",
+      "             ReLU-10          [-1, 256, 13, 13]               0\n",
+      "           Conv2d-11          [-1, 256, 13, 13]         590,080\n",
+      "             ReLU-12          [-1, 256, 13, 13]               0\n",
+      "        MaxPool2d-13            [-1, 256, 6, 6]               0\n",
+      "AdaptiveAvgPool2d-14            [-1, 256, 6, 6]               0\n",
+      "          Dropout-15                 [-1, 9216]               0\n",
+      "           Linear-16                 [-1, 4096]      37,752,832\n",
+      "             ReLU-17                 [-1, 4096]               0\n",
+      "          Dropout-18                 [-1, 4096]               0\n",
+      "           Linear-19                 [-1, 4096]      16,781,312\n",
+      "             ReLU-20                 [-1, 4096]               0\n",
+      "           Linear-21                 [-1, 1000]       4,097,000\n",
+      "================================================================\n",
+      "Total params: 61,100,840\n",
+      "Trainable params: 61,100,840\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.57\n",
+      "Forward/backward pass size (MB): 8.38\n",
+      "Params size (MB): 233.08\n",
+      "Estimated Total Size (MB): 242.03\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# retrieve pretrained model for features extraction\n",
+    "alexnet = m.alexnet().to(device)\n",
+    "summary(alexnet, (3, 224, 224))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 64, 55, 55]          23,296\n",
+      "              ReLU-2           [-1, 64, 55, 55]               0\n",
+      "         MaxPool2d-3           [-1, 64, 27, 27]               0\n",
+      "            Conv2d-4          [-1, 192, 27, 27]         307,392\n",
+      "              ReLU-5          [-1, 192, 27, 27]               0\n",
+      "         MaxPool2d-6          [-1, 192, 13, 13]               0\n",
+      "            Conv2d-7          [-1, 384, 13, 13]         663,936\n",
+      "              ReLU-8          [-1, 384, 13, 13]               0\n",
+      "            Conv2d-9          [-1, 256, 13, 13]         884,992\n",
+      "             ReLU-10          [-1, 256, 13, 13]               0\n",
+      "           Conv2d-11          [-1, 256, 13, 13]         590,080\n",
+      "             ReLU-12          [-1, 256, 13, 13]               0\n",
+      "        MaxPool2d-13            [-1, 256, 6, 6]               0\n",
+      "================================================================\n",
+      "Total params: 2,469,696\n",
+      "Trainable params: 2,469,696\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.57\n",
+      "Forward/backward pass size (MB): 8.07\n",
+      "Params size (MB): 9.42\n",
+      "Estimated Total Size (MB): 18.07\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keep only the feature extraction layers of the model\n",
+    "features = nn.Sequential(*(list(alexnet.children())[0]))\n",
+    "summary(features, (3, 224, 224))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build LSTM "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ImageEmbedder(nn.Module):\n",
+    "class LSTMCaptioning(nn.Module):\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, input_size, hidden_size):\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size)\n",
     "        \n",
+    "    def forward(self, inputs):\n",
+    "         \n",
+    "        # Get hidden states for each t (out) , and latest one (h = (ht, ct))\n",
+    "        out, ht = self.lstm(inputs.view(len(inputs), 1, -1))\n",
     "        \n",
-    "        \n",
-    "    def forward(self, inputs):"
+    "        # Compute probability distribution over all words for this t\n",
+    "        pt = F.softmax(ht, dim=1)\n",
+    "                           \n",
+    "        return out, ht, pt\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train model"
    ]
   },
   {
@@ -42,13 +177,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LSTMCaptioning(nn.Module):\n",
-    "    \n",
-    "    def __init__(self):\n",
+    "input_size = (3, 224, 224)\n",
+    "hideen_size = ...\n",
+    "\n",
+    "model = LSTMCaptioning(input_size, hidden_size)\n",
+    "\n",
+    "num_epoch = 10\n",
+    "loss_function = nn.NLLLoss()\n",
+    "\n",
+    "for epoch in range(num_epoch):\n",
+    "    for image, caption in dataset:\n",
     "        \n",
+    "        # Reset grad\n",
+    "        model.zero_grad()\n",
     "        \n",
-    "    def forward(self, inputs):\n",
+    "        # Get the input image embedding \n",
+    "        embedding = features(image)\n",
+    "        targets = ...\n",
+    "        \n",
+    "        # Forward pass\n",
+    "        out, hidden, probs = model(embedding)\n",
+    "        \n",
+    "        # Compute loss and backprop\n",
+    "        loss = loss_function(out, targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model \n",
+    "torch.save(model.state_dict(), './models/')"
    ]
   }
  ],
