--- a/model_v1.ipynb
+++ b/model_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,94 +40,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/alexnet-owt-4df8aa71.pth\" to /home/jchataigner/.cache/torch/hub/checkpoints/alexnet-owt-4df8aa71.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "17758fd7795546d38fd2291ecf928bd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=244418560.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1           [-1, 64, 55, 55]          23,296\n",
-      "              ReLU-2           [-1, 64, 55, 55]               0\n",
-      "         MaxPool2d-3           [-1, 64, 27, 27]               0\n",
-      "            Conv2d-4          [-1, 192, 27, 27]         307,392\n",
-      "              ReLU-5          [-1, 192, 27, 27]               0\n",
-      "         MaxPool2d-6          [-1, 192, 13, 13]               0\n",
-      "            Conv2d-7          [-1, 384, 13, 13]         663,936\n",
-      "              ReLU-8          [-1, 384, 13, 13]               0\n",
-      "            Conv2d-9          [-1, 256, 13, 13]         884,992\n",
-      "             ReLU-10          [-1, 256, 13, 13]               0\n",
-      "           Conv2d-11          [-1, 256, 13, 13]         590,080\n",
-      "             ReLU-12          [-1, 256, 13, 13]               0\n",
-      "        MaxPool2d-13            [-1, 256, 6, 6]               0\n",
-      "AdaptiveAvgPool2d-14            [-1, 256, 6, 6]               0\n",
-      "          Dropout-15                 [-1, 9216]               0\n",
-      "           Linear-16                 [-1, 4096]      37,752,832\n",
-      "             ReLU-17                 [-1, 4096]               0\n",
-      "          Dropout-18                 [-1, 4096]               0\n",
-      "           Linear-19                 [-1, 4096]      16,781,312\n",
-      "             ReLU-20                 [-1, 4096]               0\n",
-      "           Linear-21                 [-1, 1000]       4,097,000\n",
-      "================================================================\n",
-      "Total params: 61,100,840\n",
-      "Trainable params: 61,100,840\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 0.57\n",
-      "Forward/backward pass size (MB): 8.38\n",
-      "Params size (MB): 233.08\n",
-      "Estimated Total Size (MB): 242.03\n",
-      "----------------------------------------------------------------\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AlexNet(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (7): ReLU(inplace=True)\n",
+       "    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (9): ReLU(inplace=True)\n",
+       "    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (11): ReLU(inplace=True)\n",
+       "    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(6, 6))\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Dropout(p=0.5, inplace=False)\n",
+       "    (1): Linear(in_features=9216, out_features=4096, bias=True)\n",
+       "    (2): ReLU(inplace=True)\n",
+       "    (3): Dropout(p=0.5, inplace=False)\n",
+       "    (4): Linear(in_features=4096, out_features=4096, bias=True)\n",
+       "    (5): ReLU(inplace=True)\n",
+       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# retrieve pretrained model for features extraction\n",
-    "alexnet = m.alexnet().to(device)\n",
-    "summary(alexnet, (3, 224, 224))"
+    "\n",
+    "alexnet = m.alexnet(pretrained=True).to(device)\n",
+    "alexnet\n",
+    "#summary(alexnet, (3, 224, 224))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1           [-1, 64, 55, 55]          23,296\n",
-      "              ReLU-2           [-1, 64, 55, 55]               0\n",
-      "         MaxPool2d-3           [-1, 64, 27, 27]               0\n",
-      "            Conv2d-4          [-1, 192, 27, 27]         307,392\n",
-      "              ReLU-5          [-1, 192, 27, 27]               0\n",
-      "         MaxPool2d-6          [-1, 192, 13, 13]               0\n",
-      "            Conv2d-7          [-1, 384, 13, 13]         663,936\n",
-      "              ReLU-8          [-1, 384, 13, 13]               0\n",
-      "            Conv2d-9          [-1, 256, 13, 13]         884,992\n",
-      "             ReLU-10          [-1, 256, 13, 13]               0\n",
-      "           Conv2d-11          [-1, 256, 13, 13]         590,080\n",
-      "             ReLU-12          [-1, 256, 13, 13]               0\n",
-      "        MaxPool2d-13            [-1, 256, 6, 6]               0\n",
-      "================================================================\n",
-      "Total params: 2,469,696\n",
-      "Trainable params: 2,469,696\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 0.57\n",
-      "Forward/backward pass size (MB): 8.07\n",
-      "Params size (MB): 9.42\n",
-      "Estimated Total Size (MB): 18.07\n",
-      "----------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keep only the feature extraction layers of the model\n",
     "features = nn.Sequential(*(list(alexnet.children())[0]))\n",
@@ -143,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
