--- a/preprocessing_flickr30k.ipynb
+++ b/preprocessing_flickr30k.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,36 +466,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image': tensor([[[0.3205, 0.3889, 0.3159,  ..., 0.0708, 0.0800, 0.0580],\n",
-      "         [0.2884, 0.3556, 0.3383,  ..., 0.1296, 0.1957, 0.2136],\n",
-      "         [0.3035, 0.3749, 0.3679,  ..., 0.1087, 0.1135, 0.1207],\n",
+      "{'image': tensor([[[0.4613, 0.4719, 0.4391,  ..., 0.0736, 0.0928, 0.0880],\n",
+      "         [0.4568, 0.4757, 0.4405,  ..., 0.0835, 0.0832, 0.0710],\n",
+      "         [0.4598, 0.4713, 0.4306,  ..., 0.0836, 0.0813, 0.0871],\n",
       "         ...,\n",
-      "         [0.0872, 0.0925, 0.0558,  ..., 0.1475, 0.1345, 0.1434],\n",
-      "         [0.0588, 0.0274, 0.0374,  ..., 0.1423, 0.1255, 0.1586],\n",
-      "         [0.0462, 0.1091, 0.1125,  ..., 0.1285, 0.0876, 0.0913]],\n",
+      "         [0.2095, 0.1751, 0.0975,  ..., 0.3076, 0.2117, 0.8095],\n",
+      "         [0.1886, 0.2320, 0.2323,  ..., 0.3539, 0.2663, 0.7934],\n",
+      "         [0.2040, 0.2130, 0.2103,  ..., 0.3708, 0.2492, 0.6831]],\n",
       "\n",
-      "        [[0.2900, 0.3252, 0.2477,  ..., 0.1392, 0.1245, 0.1311],\n",
-      "         [0.2625, 0.3020, 0.2526,  ..., 0.1584, 0.2470, 0.2794],\n",
-      "         [0.2800, 0.3243, 0.2782,  ..., 0.2528, 0.2646, 0.3241],\n",
+      "        [[0.5291, 0.5534, 0.5108,  ..., 0.0766, 0.1006, 0.1143],\n",
+      "         [0.5217, 0.5495, 0.5380,  ..., 0.0748, 0.0849, 0.0762],\n",
+      "         [0.5155, 0.5456, 0.5393,  ..., 0.0806, 0.0716, 0.0803],\n",
       "         ...,\n",
-      "         [0.0541, 0.0749, 0.0597,  ..., 0.1038, 0.1142, 0.1205],\n",
-      "         [0.0508, 0.0353, 0.0394,  ..., 0.0974, 0.0865, 0.1203],\n",
-      "         [0.0509, 0.0762, 0.1048,  ..., 0.0760, 0.0733, 0.0642]],\n",
+      "         [0.1989, 0.1773, 0.1070,  ..., 0.2544, 0.1512, 0.8158],\n",
+      "         [0.1779, 0.2187, 0.2264,  ..., 0.2699, 0.2078, 0.7149],\n",
+      "         [0.2530, 0.2498, 0.2424,  ..., 0.2504, 0.1698, 0.6502]],\n",
       "\n",
-      "        [[0.2317, 0.2649, 0.1484,  ..., 0.0369, 0.0189, 0.0005],\n",
-      "         [0.1821, 0.2225, 0.1392,  ..., 0.0464, 0.0609, 0.0825],\n",
-      "         [0.2046, 0.2096, 0.1656,  ..., 0.0838, 0.0577, 0.0268],\n",
+      "        [[0.5331, 0.5634, 0.4261,  ..., 0.0130, 0.0352, 0.0359],\n",
+      "         [0.5253, 0.5376, 0.4500,  ..., 0.0215, 0.0268, 0.0179],\n",
+      "         [0.5233, 0.5259, 0.4555,  ..., 0.0280, 0.0235, 0.0410],\n",
       "         ...,\n",
-      "         [0.0261, 0.0755, 0.0180,  ..., 0.0576, 0.0499, 0.0451],\n",
-      "         [0.0302, 0.0160, 0.0243,  ..., 0.0359, 0.0348, 0.0419],\n",
-      "         [0.0329, 0.0654, 0.0542,  ..., 0.0394, 0.0248, 0.0121]]],\n",
+      "         [0.1724, 0.1705, 0.0892,  ..., 0.0919, 0.0127, 0.5436],\n",
+      "         [0.1508, 0.1700, 0.1936,  ..., 0.1352, 0.0485, 0.4336],\n",
+      "         [0.2003, 0.2261, 0.2273,  ..., 0.1130, 0.0450, 0.4033]]],\n",
+      "       dtype=torch.float64), 'captions': array([list(['a', 'child', 'in', 'a', 'pink', 'dress', 'is', 'climbing', 'up', 'a', 'set', 'of', 'stairs', 'in', 'an', 'entry', 'way', '.']),\n",
+      "       list(['a', 'girl', 'going', 'into', 'a', 'wooden', 'building', '.']),\n",
+      "       list(['a', 'little', 'girl', 'climbing', 'into', 'a', 'wooden', 'playhouse', '.']),\n",
+      "       list(['a', 'little', 'girl', 'climbing', 'the', 'stairs', 'to', 'her', 'playhouse', '.']),\n",
+      "       list(['a', 'little', 'girl', 'in', 'a', 'pink', 'dress', 'going', 'into', 'a', 'wooden', 'cabin', '.'])],\n",
+      "      dtype=object)}\n",
+      "{'image': tensor([[[0.3224, 0.3067, 0.3094,  ..., 0.2589, 0.7533, 0.1743],\n",
+      "         [0.3294, 0.2990, 0.2935,  ..., 0.1013, 0.1218, 0.1913],\n",
+      "         [0.3456, 0.3422, 0.3224,  ..., 0.0056, 0.3290, 0.2299],\n",
+      "         ...,\n",
+      "         [0.4123, 0.3979, 0.3452,  ..., 0.0451, 0.0657, 0.0345],\n",
+      "         [0.4657, 0.4662, 0.4061,  ..., 0.1079, 0.0965, 0.0741],\n",
+      "         [0.4664, 0.4402, 0.4840,  ..., 0.1272, 0.1155, 0.1265]],\n",
+      "\n",
+      "        [[0.4041, 0.4024, 0.3985,  ..., 0.2095, 0.6355, 0.1286],\n",
+      "         [0.4027, 0.3826, 0.3784,  ..., 0.1491, 0.1411, 0.1800],\n",
+      "         [0.4136, 0.3980, 0.4146,  ..., 0.1037, 0.3011, 0.1964],\n",
+      "         ...,\n",
+      "         [0.4233, 0.3680, 0.3114,  ..., 0.0413, 0.0358, 0.0374],\n",
+      "         [0.4639, 0.4713, 0.4069,  ..., 0.0728, 0.0662, 0.0614],\n",
+      "         [0.3994, 0.4132, 0.4227,  ..., 0.1150, 0.0873, 0.1061]],\n",
+      "\n",
+      "        [[0.3500, 0.3356, 0.3242,  ..., 0.0379, 0.4684, 0.0618],\n",
+      "         [0.3387, 0.3087, 0.3173,  ..., 0.0420, 0.0752, 0.0735],\n",
+      "         [0.3670, 0.3416, 0.3585,  ..., 0.0036, 0.1403, 0.0741],\n",
+      "         ...,\n",
+      "         [0.3850, 0.3337, 0.2870,  ..., 0.0146, 0.0285, 0.0197],\n",
+      "         [0.4390, 0.4433, 0.3813,  ..., 0.0260, 0.0329, 0.0445],\n",
+      "         [0.3570, 0.3529, 0.3420,  ..., 0.0413, 0.0269, 0.0448]]],\n",
       "       dtype=torch.float64), 'captions': array([list(['a', 'child', 'in', 'a', 'pink', 'dress', 'is', 'climbing', 'up', 'a', 'set', 'of', 'stairs', 'in', 'an', 'entry', 'way', '.']),\n",
       "       list(['a', 'girl', 'going', 'into', 'a', 'wooden', 'building', '.']),\n",
       "       list(['a', 'little', 'girl', 'climbing', 'into', 'a', 'wooden', 'playhouse', '.']),\n",
@@ -514,12 +543,13 @@
     "    transform=transforms.Compose([Rescale(256), RandomCrop(224), Tokenize(), ToTensor()])\n",
     ")\n",
     "\n",
-    "print(training_set[0])"
+    "print(training_set[0])\n",
+    "print(training_set[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
