--- a/preprocessing_flickr30k.ipynb
+++ b/preprocessing_flickr30k.ipynb
@@ -11,20 +11,21 @@
     "from skimage import io, transform\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import transforms as tr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 1.7.1\n",
-      "GPU found :)\n"
+      "PyTorch version: 1.6.0\n",
+      "No GPU :(\n"
      ]
     }
    ],
@@ -72,19 +73,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "150387174_24825cf871.jpg / 150387174_24825cf871.jpg\n",
-      "221973402_ecb1cd51f1.jpg / 221973402_ecb1cd51f1.jpg\n",
-      "2120469056_7a738413be.jpg / 2120469056_7a738413be.jpg\n",
-      "2376694294_9a4ecc3b90.jpg / 2376694294_9a4ecc3b90.jpg\n",
-      "1255504166_f2437febcb.jpg / 1255504166_f2437febcb.jpg\n",
-      "872135364_8c1e47d163.jpg / 872135364_8c1e47d163.jpg\n",
-      "3341077091_7ca0833373.jpg / 3341077091_7ca0833373.jpg\n",
-      "3655074079_7df3812bc5.jpg / 3655074079_7df3812bc5.jpg\n",
-      "3387542157_81bfd00072.jpg / 3387542157_81bfd00072.jpg\n",
-      "468102269_135938e209.jpg / 468102269_135938e209.jpg\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] Le chemin d’accès spécifié est introuvable: './flickr8k/images/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-62b74b4f689b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtrainPath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimagesPath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'train/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mtestPath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimagesPath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'test/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mimages\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimagesPath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mim\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mimages\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Le chemin d’accès spécifié est introuvable: './flickr8k/images/'"
      ]
     }
    ],
@@ -370,102 +366,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Rescale(object):\n",
-    "    \"\"\"Rescale the image in a sample to a given size. Usefull to have all samples of same shape in input of a CNN\n",
-    "\n",
-    "    Args:\n",
-    "        output_size (tuple or int): Desired output size. If tuple, output is\n",
-    "            matched to output_size. If int, smaller of image edges is matched\n",
-    "            to output_size keeping aspect ratio the same.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, output_size):\n",
-    "        assert isinstance(output_size, (int, tuple))\n",
-    "        self.output_size = output_size\n",
-    "\n",
-    "    def __call__(self, sample):\n",
-    "        image = sample['image']\n",
-    "\n",
-    "        h, w = image.shape[:2]\n",
-    "        if isinstance(self.output_size, int):\n",
-    "            if h > w:\n",
-    "                new_h, new_w = self.output_size * h / w, self.output_size\n",
-    "            else:\n",
-    "                new_h, new_w = self.output_size, self.output_size * w / h\n",
-    "        else:\n",
-    "            new_h, new_w = self.output_size\n",
-    "\n",
-    "        new_h, new_w = int(new_h), int(new_w)\n",
-    "\n",
-    "        img = transform.resize(image, (new_h, new_w))\n",
-    "\n",
-    "        return {'image': img, 'captions': sample['captions']}\n",
-    "\n",
-    "class RandomCrop(object):\n",
-    "    \"\"\"Crop randomly the image in a sample.\n",
-    "\n",
-    "    Args:\n",
-    "        output_size (tuple or int): Desired output size. If int, square crop\n",
-    "            is made.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, output_size):\n",
-    "        assert isinstance(output_size, (int, tuple))\n",
-    "        if isinstance(output_size, int):\n",
-    "            self.output_size = (output_size, output_size)\n",
-    "        else:\n",
-    "            assert len(output_size) == 2\n",
-    "            self.output_size = output_size\n",
-    "\n",
-    "    def __call__(self, sample):\n",
-    "        image, captions = sample['image'], sample['captions']\n",
-    "\n",
-    "        h, w = image.shape[:2]\n",
-    "        new_h, new_w = self.output_size\n",
-    "\n",
-    "        top = np.random.randint(0, h - new_h)\n",
-    "        left = np.random.randint(0, w - new_w)\n",
-    "\n",
-    "        image = image[top: top + new_h,\n",
-    "                      left: left + new_w]\n",
-    "\n",
-    "\n",
-    "        return {'image': image, 'captions': captions}\n",
-    "    \n",
-    "class ToTensor(object):\n",
-    "    \"\"\"Convert ndarrays in a sample to Tensors.\"\"\"\n",
-    "\n",
-    "    def __call__(self, sample):\n",
-    "        image, captions = sample['image'], sample['captions']\n",
-    "\n",
-    "        # swap color axis because\n",
-    "        # numpy image: H x W x C\n",
-    "        # torch image: C X H X W\n",
-    "        image = image.transpose((2, 0, 1))\n",
-    "        return {'image': torch.from_numpy(image),\n",
-    "                'captions': captions}\n",
-    "    \n",
-    "    \n",
-    "class Tokenize(object):\n",
-    "    \"\"\"Tokenize captions.\"\"\"\n",
-    "    \n",
-    "    def __call__(self, sample):\n",
-    "        image, captions = sample['image'], sample['captions']\n",
-    "        tokenizer = get_tokenizer('basic_english')\n",
-    "        \n",
-    "        for i, caption in enumerate(captions):\n",
-    "            captions[i] = tokenizer(caption)\n",
-    "            \n",
-    "        return {'image': image,\n",
-    "                'captions': captions}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -511,7 +411,7 @@
     "training_set = ImageCaptioningDataset(\n",
     "    './flickr8k/annotations/annotations_image_id.csv', \n",
     "    './flickr8k/images/train/', \n",
-    "    transform=transforms.Compose([Rescale(256), RandomCrop(224), Tokenize(), ToTensor()])\n",
+    "    transform=transforms.Compose([tr.Rescale(256), tr.RandomCrop(224), tr.Tokenize(), tr.ToTensor()])\n",
     ")\n",
     "\n",
     "print(training_set[0])"
@@ -541,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
