--- a/model_v1.ipynb
+++ b/model_v1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,25 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://download.pytorch.org/models/alexnet-owt-4df8aa71.pth\" to /home/jchataigner/.cache/torch/hub/checkpoints/alexnet-owt-4df8aa71.pth\n"
+      "Downloading: \"https://download.pytorch.org/models/resnet18-5c106cde.pth\" to /home/jchataigner/.cache/torch/hub/checkpoints/resnet18-5c106cde.pth\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17758fd7795546d38fd2291ecf928bd8",
+       "model_id": "9a1e0387a4de4d4eb36c290fd24b8a9a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=244418560.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=46827520.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -74,36 +74,93 @@
     {
      "data": {
       "text/plain": [
-       "AlexNet(\n",
-       "  (features): Sequential(\n",
-       "    (0): Conv2d(3, 64, kernel_size=(11, 11), stride=(4, 4), padding=(2, 2))\n",
-       "    (1): ReLU(inplace=True)\n",
-       "    (2): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (3): Conv2d(64, 192, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
-       "    (4): ReLU(inplace=True)\n",
-       "    (5): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "    (6): Conv2d(192, 384, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (7): ReLU(inplace=True)\n",
-       "    (8): Conv2d(384, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (9): ReLU(inplace=True)\n",
-       "    (10): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    (11): ReLU(inplace=True)\n",
-       "    (12): MaxPool2d(kernel_size=3, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "ResNet(\n",
+       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (relu): ReLU(inplace=True)\n",
+       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  (layer1): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
        "  )\n",
-       "  (avgpool): AdaptiveAvgPool2d(output_size=(6, 6))\n",
-       "  (classifier): Sequential(\n",
-       "    (0): Dropout(p=0.5, inplace=False)\n",
-       "    (1): Linear(in_features=9216, out_features=4096, bias=True)\n",
-       "    (2): ReLU(inplace=True)\n",
-       "    (3): Dropout(p=0.5, inplace=False)\n",
-       "    (4): Linear(in_features=4096, out_features=4096, bias=True)\n",
-       "    (5): ReLU(inplace=True)\n",
-       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "  (layer2): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
        "  )\n",
+       "  (layer3): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer4): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+       "  (fc): Linear(in_features=512, out_features=1000, bias=True)\n",
        ")"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,19 +168,104 @@
    "source": [
     "# retrieve pretrained model for features extraction\n",
     "\n",
-    "alexnet = m.alexnet(pretrained=True).to(device)\n",
-    "alexnet\n",
-    "#summary(alexnet, (3, 224, 224))"
+    "resnet = m.resnet18(pretrained=True).to(device)\n",
+    "resnet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1         [-1, 64, 112, 112]           9,408\n",
+      "       BatchNorm2d-2         [-1, 64, 112, 112]             128\n",
+      "              ReLU-3         [-1, 64, 112, 112]               0\n",
+      "         MaxPool2d-4           [-1, 64, 56, 56]               0\n",
+      "            Conv2d-5           [-1, 64, 56, 56]          36,864\n",
+      "       BatchNorm2d-6           [-1, 64, 56, 56]             128\n",
+      "              ReLU-7           [-1, 64, 56, 56]               0\n",
+      "            Conv2d-8           [-1, 64, 56, 56]          36,864\n",
+      "       BatchNorm2d-9           [-1, 64, 56, 56]             128\n",
+      "             ReLU-10           [-1, 64, 56, 56]               0\n",
+      "       BasicBlock-11           [-1, 64, 56, 56]               0\n",
+      "           Conv2d-12           [-1, 64, 56, 56]          36,864\n",
+      "      BatchNorm2d-13           [-1, 64, 56, 56]             128\n",
+      "             ReLU-14           [-1, 64, 56, 56]               0\n",
+      "           Conv2d-15           [-1, 64, 56, 56]          36,864\n",
+      "      BatchNorm2d-16           [-1, 64, 56, 56]             128\n",
+      "             ReLU-17           [-1, 64, 56, 56]               0\n",
+      "       BasicBlock-18           [-1, 64, 56, 56]               0\n",
+      "           Conv2d-19          [-1, 128, 28, 28]          73,728\n",
+      "      BatchNorm2d-20          [-1, 128, 28, 28]             256\n",
+      "             ReLU-21          [-1, 128, 28, 28]               0\n",
+      "           Conv2d-22          [-1, 128, 28, 28]         147,456\n",
+      "      BatchNorm2d-23          [-1, 128, 28, 28]             256\n",
+      "           Conv2d-24          [-1, 128, 28, 28]           8,192\n",
+      "      BatchNorm2d-25          [-1, 128, 28, 28]             256\n",
+      "             ReLU-26          [-1, 128, 28, 28]               0\n",
+      "       BasicBlock-27          [-1, 128, 28, 28]               0\n",
+      "           Conv2d-28          [-1, 128, 28, 28]         147,456\n",
+      "      BatchNorm2d-29          [-1, 128, 28, 28]             256\n",
+      "             ReLU-30          [-1, 128, 28, 28]               0\n",
+      "           Conv2d-31          [-1, 128, 28, 28]         147,456\n",
+      "      BatchNorm2d-32          [-1, 128, 28, 28]             256\n",
+      "             ReLU-33          [-1, 128, 28, 28]               0\n",
+      "       BasicBlock-34          [-1, 128, 28, 28]               0\n",
+      "           Conv2d-35          [-1, 256, 14, 14]         294,912\n",
+      "      BatchNorm2d-36          [-1, 256, 14, 14]             512\n",
+      "             ReLU-37          [-1, 256, 14, 14]               0\n",
+      "           Conv2d-38          [-1, 256, 14, 14]         589,824\n",
+      "      BatchNorm2d-39          [-1, 256, 14, 14]             512\n",
+      "           Conv2d-40          [-1, 256, 14, 14]          32,768\n",
+      "      BatchNorm2d-41          [-1, 256, 14, 14]             512\n",
+      "             ReLU-42          [-1, 256, 14, 14]               0\n",
+      "       BasicBlock-43          [-1, 256, 14, 14]               0\n",
+      "           Conv2d-44          [-1, 256, 14, 14]         589,824\n",
+      "      BatchNorm2d-45          [-1, 256, 14, 14]             512\n",
+      "             ReLU-46          [-1, 256, 14, 14]               0\n",
+      "           Conv2d-47          [-1, 256, 14, 14]         589,824\n",
+      "      BatchNorm2d-48          [-1, 256, 14, 14]             512\n",
+      "             ReLU-49          [-1, 256, 14, 14]               0\n",
+      "       BasicBlock-50          [-1, 256, 14, 14]               0\n",
+      "           Conv2d-51            [-1, 512, 7, 7]       1,179,648\n",
+      "      BatchNorm2d-52            [-1, 512, 7, 7]           1,024\n",
+      "             ReLU-53            [-1, 512, 7, 7]               0\n",
+      "           Conv2d-54            [-1, 512, 7, 7]       2,359,296\n",
+      "      BatchNorm2d-55            [-1, 512, 7, 7]           1,024\n",
+      "           Conv2d-56            [-1, 512, 7, 7]         131,072\n",
+      "      BatchNorm2d-57            [-1, 512, 7, 7]           1,024\n",
+      "             ReLU-58            [-1, 512, 7, 7]               0\n",
+      "       BasicBlock-59            [-1, 512, 7, 7]               0\n",
+      "           Conv2d-60            [-1, 512, 7, 7]       2,359,296\n",
+      "      BatchNorm2d-61            [-1, 512, 7, 7]           1,024\n",
+      "             ReLU-62            [-1, 512, 7, 7]               0\n",
+      "           Conv2d-63            [-1, 512, 7, 7]       2,359,296\n",
+      "      BatchNorm2d-64            [-1, 512, 7, 7]           1,024\n",
+      "             ReLU-65            [-1, 512, 7, 7]               0\n",
+      "       BasicBlock-66            [-1, 512, 7, 7]               0\n",
+      "================================================================\n",
+      "Total params: 11,176,512\n",
+      "Trainable params: 11,176,512\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.57\n",
+      "Forward/backward pass size (MB): 62.78\n",
+      "Params size (MB): 42.64\n",
+      "Estimated Total Size (MB): 105.99\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Keep only the feature extraction layers of the model\n",
-    "features = nn.Sequential(*(list(alexnet.children())[0]))\n",
+    "features = nn.Sequential(*(list(resnet.children())[:-2]))\n",
     "summary(features, (3, 224, 224))"
    ]
   },
