--- a/model_v1.ipynb
+++ b/model_v1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +27,11 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import torchvision.models as m\n",
+    "from transforms import *\n",
+    "from torchvision.transforms import Compose\n",
     "from torchsummary import summary\n",
+    "from repeat_image_dataset import RepeatImageDataset\n",
+    "from random_caption_dataset import RandomCaptionDataset\n",
     "\n",
     "print(f'PyTorch version: {torch.__version__}')\n",
     "print(\"GPU found :)\" if torch.cuda.is_available() else \"No GPU :(\")\n",
@@ -31,150 +42,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDING_SIZE = 300"
+    "IMAGE_SIZE = 224"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datas section"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transforms = Compose([Rescale(256), RandomCrop(IMAGE_SIZE), ToTensor()])\n",
+    "\n",
+    "train_repeat_dataset = RepeatImageDataset('./flickr8k/images/train/', transform=transforms)\n",
+    "train_random_dataset = RandomCaptionDataset('./flickr8k/images/train/', transform=transforms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/resnet18-5c106cde.pth\" to /home/jchataigner/.cache/torch/hub/checkpoints/resnet18-5c106cde.pth\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a1e0387a4de4d4eb36c290fd24b8a9a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=46827520.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "ResNet(\n",
-       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
-       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (relu): ReLU(inplace=True)\n",
-       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
-       "  (layer1): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (layer2): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (layer3): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (layer4): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "    )\n",
-       "  )\n",
-       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
-       "  (fc): Linear(in_features=512, out_features=1000, bias=True)\n",
-       ")"
+       "tensor([[[[0.3001, 0.3394, 0.1218,  ..., 0.5300, 0.4467, 0.4237],\n",
+       "          [0.3563, 0.5572, 0.2906,  ..., 0.1595, 0.1078, 0.1156],\n",
+       "          [0.4119, 0.6038, 0.2315,  ..., 0.1693, 0.2155, 0.1227],\n",
+       "          ...,\n",
+       "          [0.3216, 0.0864, 0.1305,  ..., 0.1257, 0.1305, 0.1331],\n",
+       "          [0.5192, 0.0628, 0.0767,  ..., 0.0713, 0.0581, 0.0590],\n",
+       "          [0.2118, 0.0631, 0.0618,  ..., 0.1037, 0.1267, 0.2224]],\n",
+       "\n",
+       "         [[0.2874, 0.2998, 0.1138,  ..., 0.5834, 0.4115, 0.3902],\n",
+       "          [0.3603, 0.5125, 0.2800,  ..., 0.1868, 0.1723, 0.1322],\n",
+       "          [0.3821, 0.5239, 0.2523,  ..., 0.2341, 0.2368, 0.1680],\n",
+       "          ...,\n",
+       "          [0.4719, 0.0370, 0.0904,  ..., 0.1049, 0.0763, 0.0841],\n",
+       "          [0.6379, 0.0890, 0.0509,  ..., 0.0794, 0.0614, 0.0678],\n",
+       "          [0.2560, 0.0490, 0.0575,  ..., 0.0678, 0.1212, 0.1889]],\n",
+       "\n",
+       "         [[0.2510, 0.2600, 0.1221,  ..., 0.5579, 0.3617, 0.2730],\n",
+       "          [0.3363, 0.4564, 0.2899,  ..., 0.0463, 0.0929, 0.0680],\n",
+       "          [0.3506, 0.4818, 0.2495,  ..., 0.1153, 0.1379, 0.0768],\n",
+       "          ...,\n",
+       "          [0.0814, 0.0331, 0.0384,  ..., 0.0269, 0.0457, 0.0367],\n",
+       "          [0.1358, 0.0350, 0.0233,  ..., 0.0428, 0.0343, 0.0347],\n",
+       "          [0.0322, 0.0248, 0.0097,  ..., 0.0354, 0.0586, 0.1271]]]],\n",
+       "       device='cuda:0')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# retrieve pretrained model for features extraction\n",
-    "\n",
-    "resnet = m.resnet18(pretrained=True).to(device)\n",
-    "resnet"
+    "im = train_repeat_dataset[0]['image'].reshape((1,3,224,224)).to(device, dtype=torch.float)\n",
+    "im"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model section"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retrieve pretrained model for features extraction\n",
+    "resnet = m.resnet18(pretrained=True).to(device)\n",
+    "#resnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -250,22 +208,23 @@
       "      BatchNorm2d-64            [-1, 512, 7, 7]           1,024\n",
       "             ReLU-65            [-1, 512, 7, 7]               0\n",
       "       BasicBlock-66            [-1, 512, 7, 7]               0\n",
+      "          Flatten-67                [-1, 25088]               0\n",
       "================================================================\n",
       "Total params: 11,176,512\n",
       "Trainable params: 11,176,512\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.57\n",
-      "Forward/backward pass size (MB): 62.78\n",
+      "Forward/backward pass size (MB): 62.97\n",
       "Params size (MB): 42.64\n",
-      "Estimated Total Size (MB): 105.99\n",
+      "Estimated Total Size (MB): 106.18\n",
       "----------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Keep only the feature extraction layers of the model\n",
-    "features = nn.Sequential(*(list(resnet.children())[:-2]))\n",
+    "features = nn.Sequential(*(list(resnet.children())[:-2]), nn.Flatten())\n",
     "summary(features, (3, 224, 224))"
    ]
   },
@@ -273,15 +232,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build LSTM "
+    "## Build LSTM + Embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "vocab_size = 9631\n",
+    "\n",
     "class LSTMCaptioning(nn.Module):\n",
     "    \n",
     "    def __init__(self, input_size, hidden_size):\n",
@@ -296,7 +257,8 @@
     "        pt = F.softmax(ht, dim=1)\n",
     "                           \n",
     "        return out, ht, pt\n",
-    "        "
+    "\n",
+    "embedding = nn.Embedding(vocab_size, 25088)"
    ]
   },
   {
@@ -327,11 +289,15 @@
     "        model.zero_grad()\n",
     "        \n",
     "        # Get the input image embedding \n",
-    "        embedding = features(image)\n",
-    "        targets = ...\n",
+    "        image_embedding = features(image)\n",
     "        \n",
-    "        # Forward pass\n",
-    "        out, hidden, probs = model(embedding)\n",
+    "        # Forward pass for t=-1: image\n",
+    "        out, hidden, probs = model(image_embedding)\n",
+    "        \n",
+    "        # Forward pass for t>=0: words\n",
+    "        for word in caption:\n",
+    "            word_vector = preprocess(word)\n",
+    "            word_embedding = embedding(word_vector)\n",
     "        \n",
     "        # Compute loss and backprop\n",
     "        loss = loss_function(out, targets)\n",
