One Hot encoding et ajout de start/stop

--- a/cbow.ipynb
+++ b/cbow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 1.7.1\n",
-      "GPU found :)\n"
+      "PyTorch version: 1.7.0\n",
+      "No GPU :(\n"
      ]
     }
    ],
@@ -35,6 +35,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
+    "import numpy as np\n",
     "\n",
     "print(f'PyTorch version: {torch.__version__}')\n",
     "print(\"GPU found :)\" if torch.cuda.is_available() else \"No GPU :(\")\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9629\n"
+      "9631\n"
      ]
     }
    ],
@@ -93,18 +94,80 @@
     "raw_sentences = list(df_vocab.iloc[:, 1])\n",
     "\n",
     "raw_text = raw_sentences[0]\n",
-    "\n",
     "# Build raw_text\n",
     "for i in range(1, len(raw_sentences)):\n",
     "    raw_text += ' ' + raw_sentences[i]\n",
     "\n",
+    "raw_text += ' <start> <stop>'\n",
+    "    \n",
     "#print(raw_text)\n",
     "raw_text = raw_text.split()\n",
     "\n",
     "# Get vocabulary\n",
-    "vocab = set(raw_text)\n",
-    "vocab_size = len(vocab)\n",
-    "print(vocab_size)"
+    "#vocab = set(raw_text)\n",
+    "#vocab_size = len(vocab)\n",
+    "#print(vocab_size)\n",
+    "vocab = np.array(raw_text)\n",
+    "vocab = np.unique(vocab) # start is at index 67 and stop is at index 68\n",
+    "print(vocab.shape[0])\n",
+    "ohe = np.identity(vocab.shape[0])\n",
+    "\n",
+    "def same_word(word1,word2):\n",
+    "    bool_arr = (word1 == word2)\n",
+    "    for b in bool_arr:\n",
+    "        if not b:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def word_to_vect(word):\n",
+    "    word_ind = np.searchsorted(vocab, word)\n",
+    "    return ohe[word_ind]\n",
+    "\n",
+    "def caption_to_vect(caption):\n",
+    "    '''\n",
+    "    Parameters : \n",
+    "        caption : a string of a caption, starting with <start> and ending with <stop>\n",
+    "    Output :\n",
+    "        a vector of shape (9631,nb_of_words) representing the caption\n",
+    "    '''\n",
+    "    c_list = caption.split()\n",
+    "    c_list = np.array(c_list)\n",
+    "    c_vect = np.zeros((len(c_list),vocab.shape[0]))\n",
+    "    for k in range(len(c_list)):\n",
+    "        print(word_to_vect(c_list[k]))\n",
+    "        c_vect[k] = np.array(word_to_vect(c_list[k]))\n",
+    "    return c_vect\n",
+    "\n",
+    "def vect_to_caption(vect):\n",
+    "    '''\n",
+    "    Parameters : \n",
+    "        vect : a np array of shape (9631,nb_of_words) that represents a caption starting with <start> ending with <stop>\n",
+    "    Output :\n",
+    "        a string caption\n",
+    "    '''\n",
+    "    caption = \"\"\n",
+    "    started = same_word(vect[0],word_to_vect('<start>'))\n",
+    "    if not started:\n",
+    "        raise ValueError\n",
+    "    for k in range(1,vect.shape[0]-1):\n",
+    "        wordx = np.argmax(vect[k])\n",
+    "        caption += vocab[wordx] + ' '\n",
+    "    stopped = same_word(vect[-1],word_to_vect('<stop>'))\n",
+    "    if not stopped:\n",
+    "        raise ValueError\n",
+    "    return caption\n",
+    "        \n",
+    "#wordtest = np.zeros((6,vocab.shape[0]))\n",
+    "#wordtest[0][67] = 1#<start>\n",
+    "#wordtest[1][310] = 1\n",
+    "#wordtest[2][4857] = 1\n",
+    "#wordtest[3][240] = 1\n",
+    "#wordtest[4][4687] = 1\n",
+    "#wordtest[5][68] = 1 #<stop>\n",
+    "#print(vect_to_caption(wordtest))\n",
+    "#print(word_to_vect('Canada'))\n",
+    "#vecttest = '<start> Crowd hurdle Canada herding <stop>'\n",
+    "#print(np.where((wordtest == caption_to_vect(vecttest)) == False))"
    ]
   },
   {
@@ -2677,7 +2740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
