add inference module with sampling implemented

--- a/ngram.ipynb
+++ b/ngram.ipynb
@@ -340,12 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save model \n",
-    "torch.save(model.state_dict(), './models/ngram')"
+    "torch.save(model.state_dict(), './models/ngram_512_v1')"
    ]
   }
  ],
