fix issue for training

--- a/model_v1_repeat.ipynb
+++ b/model_v1_repeat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -422,6 +422,41 @@
     "        print(caption)\n",
     "        \n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0330, -0.8076,  0.4611],\n",
+      "        [-1.4472,  0.5975, -0.1127],\n",
+      "        [-0.7613, -0.2993,  0.7059],\n",
+      "        [-0.5506,  0.8039, -1.2187],\n",
+      "        [ 0.9716,  0.3158, -0.1192],\n",
+      "        [ 0.1314,  2.0221, -0.5677],\n",
+      "        [-1.1597,  1.0611, -0.8042],\n",
+      "        [-0.6171,  1.3323, -1.8513],\n",
+      "        [-0.5031, -1.8007, -1.6748],\n",
+      "        [-2.0235, -0.1504,  0.9782]])\n",
+      "torch.return_types.topk(\n",
+      "values=tensor([[ 0.9716,  2.0221,  0.9782],\n",
+      "        [ 0.1314,  1.3323,  0.7059],\n",
+      "        [-0.0330,  1.0611,  0.4611]]),\n",
+      "indices=tensor([[4, 5, 9],\n",
+      "        [5, 7, 2],\n",
+      "        [0, 6, 0]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = torch.randn(10,3)\n",
+    "print(test)\n",
+    "print(torch.topk(test, k=3, dim=0))"
    ]
   }
  ],
